log
Thu 24 Aug 2023 07:50:28 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:32:9: error: unused variable ‘lista’ [-Werror=unused-variable]
   32 |   List* lista=(List*)malloc(sizeof(List));
      |         ^~~~~
cc1: all warnings being treated as errors
Compilation failed
0f22d85
Thu 24 Aug 2023 07:50:38 PM UTC: 
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:32:8: error: unused variable ‘lista’ [-Werror=unused-variable]
   32 |   List*lista=(List*)malloc(sizeof(List));
      |        ^~~~~
cc1: all warnings being treated as errors
Compilation failed
28ae6b0
Thu 24 Aug 2023 07:51:27 PM UTC: 
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:32:8: error: unused variable ‘lista’ [-Werror=unused-variable]
   32 |   List*lista=(List*)malloc(sizeof(List));
      |        ^~~~~
cc1: all warnings being treated as errors
Compilation failed
e823a0f
Thu 24 Aug 2023 07:51:41 PM UTC: 
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:32:11: error: unused variable ‘lista’ [-Werror=unused-variable]
   32 |   List *  lista=(List*)malloc(sizeof(List));
      |           ^~~~~
cc1: all warnings being treated as errors
Compilation failed
bfee2fe
Thu 24 Aug 2023 07:51:50 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:32:9: error: unused variable ‘lista0’ [-Werror=unused-variable]
   32 |   List *lista0=(List*)malloc(sizeof(List));
      |         ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
79359e4
Thu 24 Aug 2023 07:52:28 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
b1c9186
